kyverno/block-httpbin.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-httpbin
spec:
  validationFailureAction: Enforce  # Used to Block 
  background: true
  rules:
    - name: prevent-httpbin-leak
      match:
        resources:
          kinds:
            - Pod
            - Deployment
      validate:
        message: "httpbin image is known to echo Authorization headers; use an approved image"
        anyPattern:
        - spec:
            containers:
              - image: "!kennethreitz/httpbin"
